# vertex-ai-toolkit

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile.web  README.md  prototype_dashboard.html  pyproject.toml
.atl/: skill-registry.md
.github/: CODEOWNERS  dependabot.yml
.github/actions/health-check/: .dockerignore  Dockerfile  action.yml  entrypoint.py
.github/workflows/: build.yml  ci.yml  health-check-example.yml  release-tag.yml  vscode-extension.yml
config/: default.yaml
deploy/: service.yaml
docs/: README.md  advanced.md  agents-guide.md  architecture.md  cli-reference.md  configuration.md  export-guide.md  getting-started.md  github-action.md  mcp-guide.md  presentation-v0.9.0.md  releasing.md  repl-guide.md  sessions-guide.md  skills-guide.md  telemetry-guide.md  tools-reference.md  web-deployment.md
docs/presentations/: csuite-live-mode.html  demo-live-mode.html
docs/specs/: global-endpoint-v1.md  pending-improvements-v0.10.md  rate-limit-resilience-v1.md  v1-next-gen-architecture.md
docs/tutorials/: live-mode-binary-setup.md
examples/pentaho-etl/: README.md
examples/pentaho-etl/config/: db_connections.xml  kettle.properties
examples/pentaho-etl/jobs/: daily_sales_job.kjb
examples/pentaho-etl/scripts/: run_daily_etl.sh
examples/pentaho-etl/sql/: create_staging.sql  create_warehouse.sql  stored_procedures.sql
examples/pentaho-etl/transformations/: calc_metrics.ktr  clean_sales.ktr  custom_logic.ktr  enrich_dimensions.ktr  ingest_ecommerce.ktr  ingest_inventory.ktr  ingest_pos_sales.ktr  load_warehouse.ktr  merge_sources.ktr  route_output.ktr
examples/sample-project/: README.md  run.sh
examples/sample-project/config/: logging.json  settings.yaml
examples/sample-project/docs/: architecture.md
examples/sample-project/src/: __init__.py  formatter.py  manager.py  models.py  priority.py  utils.py
examples/sample-project/tests/: test_manager.py  test_models.py
src/vaig/: __init__.py  __main__.py
src/vaig/agents/: __init__.py  base.py  chunked.py  coding.py  coding_pipeline.py  infra_agent.py  investigation_agent.py  mixins.py  orchestrator.py  registry.py  specialist.py  tool_aware.py  utils.py
src/vaig/cli/: __init__.py  _completions.py  _helpers.py  app.py  check_schema.py  display.py  export.py  repl.py
src/vaig/context/: __init__.py  builder.py  filters.py  loader.py
src/vaig/core/: __init__.py  async_utils.py  attachment_adapter.py  attachment_cache.py  attachment_priors_extractor.py  auth.py  auto_orchestration.py  cache.py  circuit_breaker.py  client.py  compare.py  config.py  config_switcher.py  container.py  context_budget.py  cost_tracker.py  discovery.py  effectiveness.py  endpoint_probe.py  event_bus.py  events.py  evidence_ledger.py  exceptions.py  export.py  export_transformers.py  fleet.py  git_integration.py  gke.py  global_budget.py  headless.py  hypothesis_library.py  identity.py  investigation.py  language.py  log.py  models.py  optimizer.py  output_redactor.py  platform_auth.py  pricing.py  (+30 more)
src/vaig/integrations/: __init__.py  dispatcher.py  email_sender.py  finding_exporter.py  formatters.py  google_chat.py  jira.py  pagerduty.py  slack.py  webhook_server.py
src/vaig/platform/: __init__.py  app.py
src/vaig/session/: __init__.py  manager.py  store.py  summarizer.py
src/vaig/skills/: __init__.py  _presets.py  base.py  loader.py  registry.py  scaffold.py
src/vaig/tools/: __init__.py  agent_tool.py  base.py  categories.py  file_tools.py  gcloud_tools.py  gke_tools.py  mcp_bridge.py  plugin_loader.py  (+2 more)
terraform-vaig/: README.md  main.tf  outputs.tf  vaig-check.sh  variables.tf
tests/: _helpers.py  conftest.py  test_429_retry.py  test_agent_layer_state.py  test_agent_tool.py  test_agents.py  test_agents_as_tools_integration.py  test_alert_correlation.py  test_all_skills_prompt_defense.py  test_anti_hallucination.py  test_api_cli_management.py  test_api_config_policy.py  test_argo_crd_timeout.py  test_argo_rollouts.py  test_argo_rollouts_ownership.py  test_argocd.py  test_ask_cli_resume_repo.py  test_async_integration.py  test_async_utils.py  test_attachments_sprint1.py  test_attachments_sprint2_att05.py  test_attachments_sprint2_att07.py  test_attachments_sprint3_att06.py  test_attachments_sprint3_att08_cache.py  test_attachments_sprint3_att08_session.py  test_attachments_sprint3_wire.py  test_audit_extras.py  test_audit_subscriber.py  test_auto_orchestration.py  test_autopilot_aware_analysis.py  test_base_agent_async.py  test_base_skill_routing.py  test_batch_models.py  test_billing.py  test_builtin_skills.py  test_cache.py  test_check_command.py  test_check_schema.py  test_chunked.py  test_circuit_breaker.py  (+271 more)
tests/agents/: test_investigation_agent.py  test_orchestrator_attachment.py
tests/core/: test_detect_file_kind.py  test_headless.py  test_headless_attachment.py  test_headless_map_reduce.py  test_report_merge.py
tests/integration/: test_attach_propagation.py  test_autonomous_pipeline.py
tests/skills/: test_att10_acceptance.py  test_att10_attachment_priors.py  test_att10_operating_mode.py  test_att10_reporter_sections.py  test_att10_source_support.py  test_att10_verifier_ratification.py  test_att11_attachment_visibility.py
tests/ui/: test_spa_template_audit08.py  test_spa_template_evidence_gaps.py  test_spa_template_hypotheses.py  test_spa_template_investigation.py
tests/web/: __init__.py  test_access_control.py  test_access_protocol.py  test_annotations_routes.py  test_ask.py  test_chat.py  test_deps.py  test_errors.py  test_event_bridge.py  test_firestore_store.py  test_live_concurrency.py  test_live_semaphore.py  test_ollama.py  test_protocol.py  test_session_config.py  test_settings_factory.py  test_settings_route.py  test_sharing_routes.py  test_skills_route.py  test_sse.py
vscode-extension/: .vscodeignore  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
vscode-extension/src/: config.ts  extension.ts  types.ts
vscode-extension/tests/: client.test.ts  config.test.ts  connection.test.ts
(+313 files in other folders)
