[project]
name = "vertex-ai-toolkit"
version = "0.1.0"
description = "Multi-agent AI toolkit powered by Vertex AI Gemini — interactive CLI with skills for RCA, anomaly detection, and code migration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "google-genai>=1.0.0",
    "google-auth>=2.35.0",
    "typer[all]>=0.15.0",
    "rich>=13.9.0",
    "prompt-toolkit>=3.0.48",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "pathspec>=0.12.1",
    "chardet>=5.2.0",
    "pymupdf>=1.25.0",
    "pillow>=11.0.0",
    "humanize>=4.11.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
live = [
    "kubernetes>=31.0.0",
    "google-cloud-logging>=3.11.0",
    "google-cloud-monitoring>=2.23.0",
    "google-cloud-container>=2.51.0",
    "google-auth>=2.35.0",
]

[project.scripts]
vaig = "vaig.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vaig"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

# ── Coverage ──────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src/vaig"]
branch = true
omit = [
    "*/__pycache__/*",
    "*/.venv/*",
    "tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "raise AssertionError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
exclude_also = [
    "def __repr__",
    "class .*\\bProtocol\\):",
]

[tool.coverage.html]
directory = "htmlcov"
