[project]
name = "vertex-ai-toolkit"
version = "0.15.0"
description = "Multi-agent AI toolkit powered by Vertex AI Gemini — interactive CLI with skills for RCA, anomaly detection, and code migration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "google-genai>=1.0.0",
    "google-auth>=2.35.0",
    "typer[all]>=0.15.0",
    "rich>=15.0.0",
    "prompt-toolkit>=3.0.48",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "pathspec>=0.12.1",
    "chardet>=5.2.0",
    "pymupdf>=1.25.0",
    "pillow>=11.0.0",
    "humanize>=4.11.0",
    "aiosqlite>=0.20.0",
    "markdown-it-py>=3.0.0",
    "apscheduler>=4.0.0a1",
]

[project.optional-dependencies]
live = [
    "kubernetes>=31.0.0",
    "google-cloud-logging>=3.11.0",
    "google-cloud-monitoring>=2.23.0",
    "google-cloud-container>=2.51.0",
    "google-cloud-billing>=1.14.0",
    "google-auth>=2.35.0",
    "datadog-api-client>=2.0.0,<3.0.0",
    "requests>=2.32.0",
]
rag = [
    "google-cloud-bigquery>=3.20.0",
    "google-cloud-storage>=2.16.0",
    "google-cloud-aiplatform>=1.60.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
]
audit = [
    "google-cloud-bigquery>=3.20.0",
    "google-cloud-storage>=2.16.0",
    "google-cloud-logging>=3.11.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.0",
    "vertex-ai-toolkit[live]",
    "vertex-ai-toolkit[rag]",
    "vertex-ai-toolkit[web]",
]

[project.scripts]
vaig = "vaig.cli.app:app"

# Entry-point group for third-party skill plugins.
# Third-party packages register skills here, e.g.:
#   [project.entry-points."vaig.skills"]
#   my_skill = "my_package.skills:MyCustomSkill"
# See README.md for details.
[project.entry-points."vaig.skills"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vaig"]

[tool.hatch.build.targets.wheel.force-include]
"src/vaig/ui/spa_template.html" = "vaig/ui/spa_template.html"
"src/vaig/ui/general_report_template.html" = "vaig/ui/general_report_template.html"
"src/vaig/skills/code_migration/idioms/python_to_go.yaml" = "vaig/skills/code_migration/idioms/python_to_go.yaml"
"src/vaig/skills/code_migration/idioms/pentaho_to_glue.yaml" = "vaig/skills/code_migration/idioms/pentaho_to_glue.yaml"
"src/vaig/web/templates" = "vaig/web/templates"
"src/vaig/web/static" = "vaig/web/static"

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
    "examples/",
    "sample-project/",
    "pentaho-etl/",
    "docs/",
    "build/",
    "dist/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = [
    # Security rules — false positives in non-web CLI tool context
    "S101",   # assert used (we use pytest)
    "S105",   # hardcoded password strings (test fixtures, config defaults)
    "S106",   # hardcoded password in func arg (same)
    "S108",   # hardcoded temp file (CLI tool uses /tmp intentionally)
    "S110",   # try-except-pass (acceptable in optional-import patterns)
    "S603",   # subprocess call without shell=True check
    "S607",   # start process with partial path
    "S608",   # SQL injection via string-based query — false positive on AI prompt templates
    # Line length — long prompt strings are unavoidable in AI tool
    "E501",
    # Import order — E402 needed for lazy/conditional imports (typer, k8s)
    "E402",
    # Naming — codebase conventions differ from PEP8 in some cases
    "N806",   # variable in function should be lowercase (constants-in-function pattern)
    "N801",   # class name should use CapWords (typer subcommand classes)
    "N815",   # mixedCase variable in class scope (external API compat)
    # Trailing whitespace — in prompt strings, trailing spaces are content
    "W291",
    "SIM102", # nested if (sometimes clearer than combined condition)
    "SIM103", # return condition directly (explicit if/return is clearer)
    "SIM105", # use contextlib.suppress (explicit try/except is clearer)
    "SIM108", # use ternary (multi-line if/else is more readable for complex cases)
    "SIM117", # multiple with statements (nested context managers are clearer sometimes)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "F841",   # unused variables (test setup, mock captures)
    "B007",   # unused loop control variable (test iteration patterns)
    "B017",   # assert raises Exception (acceptable in tests)
    "B023",   # function uses loop variable (test parametrize patterns)
    "E741",   # ambiguous variable name (short names ok in tests)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "kubernetes",
    "kubernetes.*",
    "mcp",
    "mcp.*",
    "yaml",
    "yaml.*",
    "fitz",
    "google.cloud",
    "google.cloud.*",
    "google.protobuf",
    "google.protobuf.*",
    "datadog_api_client",
    "datadog_api_client.*",
    "requests",
    "requests.*",
    "fastapi",
    "fastapi.*",
    "uvicorn",
    "uvicorn.*",
    "sse_starlette",
    "sse_starlette.*",
    "starlette",
    "starlette.*",
    "multipart",
    "multipart.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "vaig.tools.gke.datadog_api",
    "vaig.tools.gcloud_tools",
]
# CI (Python 3.12) stubs differ from local — type: ignore[no-untyped-call] needed in CI
# but reported as unused locally. Suppress the unused-ignore warning for these files.
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

# ── Coverage ──────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src/vaig"]
branch = true
omit = [
    "*/__pycache__/*",
    "*/.venv/*",
    "tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "raise AssertionError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
exclude_also = [
    "def __repr__",
    "class .*\\bProtocol\\):",
]

[tool.coverage.html]
directory = "htmlcov"
